# snakey

./: .gitignore  .merlin  .ocamlformat  Dockerfile  README.md  assembly.ml  changes.md  errors.ml  exprs.ml  graph.ml  libtest.ml  migrate_tests.ml  parser.mly  pretty.ml  runner.ml  test.ml
examples/: Makefile  compiler2.ml  compiler_lecture_2.ml
final/: Makefile  changes.md  compile.ml  dune  exprs.ml  gc.c  lexer.mll  libtest.ml  main.c  parser.mly  pretty.ml  runner.ml  test.ml
hw0/: Makefile  functions.ml  max.ml
hw1/: expr.ml  functions.ml  sexp.ml  test.ml
hw1-2/: expr.ml  sexp.ml  test  test.ml
hw10/: Makefile  compile.ml  dune  exprs.ml  gc.c  graph.ml  lexer.mll  libtest.ml  main.c  runner.ml  t1.out  t2.out  test.ml  test.test
hw2/: compile.ml  main.ml  runner.ml  sexp.ml  test.ml
hw2/input/: test2.adder  test3.adder  test5.adder  test_error1.adder  test_error2.adder  (+1 more)
hw3/: Makefile  compile.ml  exprs.ml  pretty.ml  test.ml
hw4/: '  Makefile  compile.ml  main.c  test.ml
hw5/: Makefile  compile.ml  dune  exprs.ml  libtest.ml  main.c  phases.ml  pretty.ml  test.ml
hw6/: Makefile  assembly.ml  compile.ml  errors.ml  exprs.ml  libtest.ml  main.c  main.ml  parser.mly  phases.ml  pretty.ml  runner.ml  test.ml
hw8/: .merlin  Makefile  assembly.ml  compile.ml  dune  errors.ml  exprs.ml  libtest.ml  main.c  main.ml  phases.ml  pretty.ml  test.in  test.ml
hw8/input/: lists.egg
hw8/output/: anf_set_tuple.in
hw9/: Makefile  assembly.ml  compile.ml  dune  exprs.ml  gc.c  libtest.ml  main.c  phases.ml  test.ml
output/: README.md
(+4 files in other folders)
