(library
  (name racer_impl)
  (modules assembly compile errors exprs phases pretty runner lexer parser graph libtest)
  (libraries ounit2 extlib unix)
  (wrapped false))

(ocamllex (modules lexer))
(menhir (modules parser))

(executable
  (name main)
  (modules main)
  (libraries racer_impl)
  (modes byte exe))

(test
  (name test)
  (modules test)
  (libraries racer_impl ounit2)
  (modes byte exe))

(env (dev (flags (:standard -warn-error -A))))

